--- a/starter-code/assets/css/layout.css
+++ b/starter-code/assets/css/layout.css
@@ -23,6 +23,10 @@ h3 {
 header {
     margin: 0 0 2em 0;
 }
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
 footer {
     margin: 2em 0 0 0;
 }
@@ -174,40 +178,38 @@ text-decoration: none;
     display: none;
 }
 #header {
-display: -moz-flex;
-display: -webkit-flex;
-display: -ms-flex;
-display: flex;
--moz-flex-direction: column;
--webkit-flex-direction: column;
--ms-flex-direction: column;
-flex-direction: column;
+display:grid;
+display: -ms-grid;
+grid-template-columns: 5em 5em 5em 5em 5em 5em 5em;
+grid-template-rows: 1em 1em 1em 1em 1em 1em 1 1em;
+grid-column: 1/7;
+grid-row: 1/7;
+/* -moz-flex-direction:row;
+-webkit-flex-directin: row;
+-ms-flex-direction: row;
+flex-direction: row;
 -moz-justify-content: space-between;
 -webkit-justify-content: space-between;
 -ms-justify-content: space-between;
-justify-content: space-between;
+justify-content: space-between; */
 background: #222629 url("images/overlay.png");
 box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 color: #fff;
 height: 100%;
 left: 0;
-overflow-y: auto;
-position: fixed;
-text-align: right;
+
+/* position: block-inline; */
+text-align: center;
 top: 0;
 width: 375px;
 }
 #header .top {
-    -moz-flex-grow: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-grow: 1;
-    flex-grow: 1;
+    grid-column: 1/5;
+    grid-row: 1/5;
 }
 #header .bottom {
-    -moz-flex-shrink: 0;
-    -webkit-flex-shrink: 0;
-    -ms-flex-shrink: 0;
-    flex-shrink: 0;
+    grid-column: 1/6;
+    grid-row: 5/6;
     padding: 1.5em 0 0.75em 0;
 }#header .icons {
     font-size: 0.8em;
@@ -224,20 +226,20 @@ transition: color 0.35s ease-in-out;
     color: #fff;
 }
 #logo {
-position: relative;
+grid-column: 6/6;
 margin: 1.75em 1.5em 1.5em 1.5em;
 min-height: 48px;
 cursor: default;
 }
 #logo h1 {
-    position: relative;
+    grid-columns: 2/6; 
     color: #fff;
     font-weight: 600;
     font-size: 1em;
     line-height: 1em;
 }
 #logo p {
-    position: relative;
+    position: block-inline;
     display: block;
     font-size: 0.6em;
     color: rgba(255, 255, 255, 0.5);
