--- a/starter-code/assets/css/modules.css
+++ b/starter-code/assets/css/modules.css
@@ -61,7 +61,7 @@ input[type="button"],
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color:  #f56be2;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -406,7 +406,7 @@ table tbody tr:nth-child(2n+2) {
 						-webkit-font-smoothing: antialiased;
 						-moz-osx-font-smoothing: grayscale;
 						content: '\f0c9';
-						color: #fff;
+						color: rgb(248, 202, 246);
 						font-size: 18px;
 						line-height: 2.25em;
 						background: rgba(128, 136, 144, 0.5);
