--- a/assets/css/modules.css
+++ b/assets/css/modules.css
@@ -158,10 +158,9 @@ table tbody tr:nth-child(2n+2) {
 
 #main > section.one {
     background-color: #81918E;
-    background-image: url("../../images/banner.jpg");
+	background-image: url("../../images/computerScreen.gif");
 }
-
-#main > section.two {
+main > section.two {
     background-color: #f5fafa;
 }
 
@@ -346,7 +345,7 @@ table tbody tr:nth-child(2n+2) {
 				width: 275px;
 				z-index: 10002;
 				width: 275px;
-				background: #222729 url("images/overlay.png");
+				background: #222729 url("images/newBanner.png");
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 			}
 
